--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,8 @@
             </ul>
 
         </div>
+		
+		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1263130514'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1263130514%26show%3Dpic2' type='text/javascript'%3E%3C/script%3E"));</script>
     </footer>
     <!-- / footer -->
     <script src="/assets/vendor/share.js/dist/js/share.min.js"></script>
@@ -53,5 +55,6 @@
       </script>
     </div>
     {% endif %}
+	
 </body>
 </html>
