--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
             <div class="copyright left mobile-block">
                     {{ site.time }} © 
                     <span title="{{ site.author}}">{{ site.author }}</span>
-					<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1263130514'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1263130514%26show%3Dpic2' type='text/javascript'%3E%3C/script%3E"));</script>
+					
                     <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">TOP</a>
             </div>
 
@@ -29,6 +29,7 @@
 		
     </footer>
     <!-- / footer -->
+	<script src="https://s13.cnzz.com/z_stat.php?id=1263130514&web_id=1263130514" language="JavaScript"></script>
     <script src="/assets/vendor/share.js/dist/js/share.min.js"></script>
     <script src="/assets/js/geopattern.js"></script>
     <script src="/assets/js/prism.js"></script>
