1、添加百度统计

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -78,6 +78,16 @@
         }
     }
     </script>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?f7f1b8ce33107ddc1905bee6c9ee319a";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+
 </head>
 <body class="{{ page.class }}" data-mz="{{ page.class }}">
     <header class="site-header">
